--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           >
             III Trail das Amendoeiras
           </h2>
-          <p class="text-2xl text-white text-center md:text-left">3 de Maio</p>
+          <p class="text-2xl text-white text-center md:text-left">3 de Março</p>
         </div>
         <div>
           <a
@@ -132,15 +132,12 @@
             class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-slate-100 mb-32 md:w-1/3"
           >
             <img
-              src="img/woman-s-legs-running-morning.jpg"
+              src="img/photo-event-1.jpg"
               alt=""
               class="w-64 -mt-14 rounded-lg"
             />
             <h5 class="text-lg font-bold">III Trail das Amendoeiras</h5>
-            <p class="text-sm text-darkGrayishBlue">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-              sapien lorem, rhoncus in orci nec, tristique tincidunt elit.
-            </p>
+            <p class="text-sm text-gray-500">3 de Março</p>
             <a
               href=""
               class="p-3 px-6 pt-2 text-white bg-primaryRed rounded-full baseline hover:bg-primaryLightRed"
@@ -152,15 +149,12 @@
             class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-slate-100 mb-32 md:w-1/3"
           >
             <img
-              src="img/woman-s-legs-running-morning.jpg"
+              src="img/photo-event-2.jpg"
               alt=""
               class="w-64 -mt-14 rounded-lg"
             />
-            <h5 class="text-lg font-bold">III Trail das Amendoeiras</h5>
-            <p class="text-sm text-darkGrayishBlue">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-              sapien lorem, rhoncus in orci nec, tristique tincidunt elit.
-            </p>
+            <h5 class="text-lg font-bold">II Passeio de BTT</h5>
+            <p class="text-sm text-gray-500">1 de Maio</p>
             <a
               href=""
               class="p-3 px-6 pt-2 text-white bg-primaryRed rounded-full baseline hover:bg-primaryLightRed"
@@ -172,15 +166,12 @@
             class="flex flex-col items-center p-6 space-y-6 rounded-lg bg-slate-100 mb-32 md:w-1/3"
           >
             <img
-              src="img/woman-s-legs-running-morning.jpg"
+              src="img/photo-event-3.jpg"
               alt=""
               class="w-64 -mt-14 rounded-lg"
             />
             <h5 class="text-lg font-bold">III Trail das Amendoeiras</h5>
-            <p class="text-sm text-darkGrayishBlue">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
-              sapien lorem, rhoncus in orci nec, tristique tincidunt elit.
-            </p>
+            <p class="text-sm text-gray-500">24 de junho</p>
             <a
               href=""
               class="p-3 px-6 pt-2 text-white bg-primaryRed rounded-full baseline hover:bg-primaryLightRed"
