--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </div>
         </div>
         <div class="md:w-1/2">
-          <img src="img/hero-image.jpg" alt="" />
+          <img src="img/hero-image-min.jpg" alt="" />
         </div>
       </div>
     </section>
