--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       sizes="32x32"
       href="img/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="node_modules/swiper/swiper-bundle.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="./node_modules/swiper/swiper-bundle.css" />
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body class="bg-slate-50">
     <!-- Navbar -->
@@ -108,7 +108,7 @@
     <!--Next event promo CTA-->
     <section
       id="cta"
-      class="bg-[url('/img/cta-bg.jpg')] bg-no-repeat bg-cover bg-center bg-opacity-50"
+      class="bg-[url('./img/cta-bg.jpg')] bg-no-repeat bg-cover bg-center bg-opacity-50"
     >
       <div
         class="container flex flex-col items-center justify-between px-6 py-16 mx-auto space-y-12 md:px-12 md:flex-row md:space-y-0"
@@ -246,7 +246,7 @@
       </div>
     </footer>
     <!--Import scripts-->
-    <script src="node_modules/swiper/swiper-bundle.min.js"></script>
-    <script src="js/script.js"></script>
+    <script src="./node_modules/swiper/swiper-bundle.min.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
