--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="img/favicon-32x32.png"
     />
     <link rel="stylesheet" href="/node_modules/swiper/swiper-bundle.css" />
-    <link rel="stylesheet" href="/css/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
   </head>
   <body class="bg-slate-50">
     <!-- Navbar -->
