--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       sizes="32x32"
       href="img/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="/node_modules/swiper/swiper-bundle.css" />
+    <link rel="stylesheet" href="node_modules/swiper/swiper-bundle.css" />
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body class="bg-slate-50">
@@ -246,7 +246,7 @@
       </div>
     </footer>
     <!--Import scripts-->
-    <script src="/node_modules/swiper/swiper-bundle.min.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="node_modules/swiper/swiper-bundle.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
