--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <!--Next event promo CTA-->
     <section
       id="cta"
-      class="bg-[url('/img/cta-bg.jpg')] bg-no-repeat bg-cover bg-center bg-opacity-50"
+      class="bg-cta-image bg-no-repeat bg-cover bg-center bg-opacity-50"
     >
       <div
         class="container flex flex-col items-center justify-between px-6 py-16 mx-auto space-y-12 md:px-12 md:flex-row md:space-y-0"
