--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <!--Next event promo CTA-->
     <section
       id="cta"
-      style="background-image: url('/img/cta-bg.jpg')"
+      style="background-image: url('img/cta-bg.jpg')"
       class="bg-no-repeat bg-cover bg-center bg-opacity-50"
     >
       <div
